--- a/P4Connector/P4Connector.csproj
+++ b/P4Connector/P4Connector.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
     <Compile Include="Authentification.cs" />
     <Compile Include="Changelist.cs" />
     <Compile Include="Client.cs" />
